# gst-rr-openmax-dm81xx

./: .gitignore  Makefile.am  configure.ac
ext/: Makefile.am  gstomx.c  gstomx.h  gstomxaacdec.c  gstomxaacdec.h  gstomxaacenc.c  gstomxaacenc.h  gstomxbase.c  gstomxbase.h  gstomxbasedecoder.c  gstomxbasedecoder.h  gstomxbasepush.c  gstomxbasepush.h  gstomxbasesrc.c  gstomxbasesrc.h  gstomxbufferalloc.c  gstomxbufferalloc.h  gstomxbufqueue.c  gstomxbufqueue.h  gstomxbuftab.c  gstomxbuftab.h  gstomxcamera.c  gstomxcamera.h  gstomxdecoder.c  gstomxdecoder.h  gstomxdeiscaler.c  gstomxdeiscaler.h  gstomxerror.c  gstomxerror.h  gstomxh264dec.c  gstomxh264dec.h  gstomxh264enc.c  gstomxh264enc.h  gstomxjpegdec.c  gstomxjpegdec.h  gstomxjpegenc.c  gstomxjpegenc.h  gstomxmpeg2dec.c  gstomxmpeg2dec.h  gstomxnoisefilter.c  (+13 more)
